--- a/style.css
+++ b/style.css
@@ -1,20 +1,14 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     padding-left: 1rem;
-    background-color: aliceblue;
+    background-color: #7e8ab8;
 }
 
-/* Style the search box inside the navigation bar */
-.topnav input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 16px;
-    font-size: 17px;
-  }
+#search {
+    padding-bottom: 1rem;
+}
 
-    #results {
+#results {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -22,8 +16,13 @@ body {
 
 .song {
     width: 13rem;
-    /* border: .2rem solid green; */
     padding: 0.75rem 0 0.75rem;
+    margin: 0.25rem;
+    background-color: rgb(200, 218, 234);
+    border: solid;
+    border-width: 0.1rem;
+    border-color: black;
+    border-radius: 3rem;
 }
 
 .trackName {
